[package]
name = "byond_fn"
version = "0.5.1"
authors = ["Rob Bailey <actioninja@criticalaction.net"]
edition = "2021"
description = "A utility macro for generating FFI functions for BYOND"
repository = "https://github.com/actioninja/byond_fn"
license = "MPL-2.0"
keywords = ["byond", "ffi", "dm", "tg", "macro"]
categories = ["development-tools::ffi"]
include = ["LICENSE.md", "README.md", "src/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byond_fn_impl = { version = "0.4.0", path = "impl" }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["json_transport"]
json_transport = ["dep:serde", "dep:serde_json"]
allow_other_arch = ["byond_fn_impl/allow_other_arch"]
ffi_v2 = ["byond_fn_impl/ffi_v2"]

[workspace]
members = [
    "impl",
    "example_crate"
]

# docs.rs should build against standard x64 since it's not actually going to be linked against BYOND
[package.metadata.docs.rs]
features = ["allow_other_arch"]
