[package]
name = "byond_fn"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byond_fn_impl = { version = "0.1.0", path = "../byond_fn_impl" }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }


[features]
default = ["json_transport"]
json_transport = ["dep:serde", "dep:serde_json"]
allow_other_arch = ["byond_fn_impl/allow_other_arch"]
ffi_v2 = ["byond_fn_impl/ffi_v2"]
