[package]
name = "byond_fn_impl"
version = "0.1.0"
authors = ["actioninja <actioninja@criticalaction.net>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
syn = { version = "2.0", features = ["full"] }

[features]
allow_other_arch = []
ffi_v2 = []
