[package]
name = "byond_fn_impl"
version = "0.4.0"
authors = ["actioninja <actioninja@criticalaction.net>"]
description = "proc macro implementation for byond_fn. Do not use directly."
edition = "2021"
license = "MPL-2.0"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
syn = { version = "2.0", features = ["full"] }

[features]
allow_other_arch = []
ffi_v2 = []
